break words in play card to prevent overflow

--- a/src/components/PlayCard.scss
+++ b/src/components/PlayCard.scss
@@ -24,5 +24,7 @@
     align-items: center;
     text-align: center;
     padding: 15px;
+    hyphens: auto;
+    word-break: break-word;
   }
 }
